--- a/projects/01_fyyur/starter_code/templates/forms/edit_artist.html
+++ b/projects/01_fyyur/starter_code/templates/forms/edit_artist.html
@@ -32,6 +32,18 @@
           <label for="genres">Facebook Link</label>
           {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id="facebook_link", autofocus = true) }}
         </div>
+        <div class="form-group">
+          <label for="genres">Website</label>
+          {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true, id="website") }}
+        </div>
+        <div class="form-group">
+          <label for="genres">Seeking Venue ?</label><br>
+          {{ form.seeking_venue( autofocus = true , id="seeking_venue") }}
+        </div>
+        <div class="form-group">
+          <label for="genres">Seeking Description</label>
+          {{ form.seeking_description(class_ = 'form-control', placeholder='Tell us more about what your are looking for!', autofocus = true, id="seeking_description") }}
+        </div>
       <input type="submit" value="Edit Artist" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
